--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,12 @@ before_script:
 language: python
 python:
   - "3.7"
+  - "3.8"
 install:
   - pip install -r requirements.txt
   - pip install codacy-coverage
 script:
   - cd decide
   - python ./manage.py test census --keepdb
+  - python ./manage.py test authentication --keepdb
 
